--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="carre" id="carre"></div>
   <button id="BtnCarte">Tirer une carte</button>
-  <a href="nuancier.html"><button id="playBtn">Lancer le jeu avec cette couleur ! </button></a>
+  <button id="StartBtn">Lancer le jeu avec cette couleur ! </button>
   <script src="generateColor.js">
   </script>
 </body>
