--- a/finalScreen.html
+++ b/finalScreen.html
@@ -2,11 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="styleFinalScreen.css">
+  <link rel="stylesheet" href="styleNuancier.css">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Hue and Clue !</title>
 </head>
 <body>
+  <div class="board" id="board"></div>
+  <script src="generateNuancierWithChoice.js"></script>
   <button id="rejouer"> rejouer !</button>
   <p id="pointsJ1"></p>
   <p id="pointsJ2"></p>
