--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <div class="carre" id="carre"></div>
   <button id="BtnCarte">Tirer une carte</button>
   <button id="StartBtn">Lancer le jeu avec cette couleur ! </button>
+  <a href="Regle.html"><button> Regles du jeu</button></a>
   <script src="generateColor.js">
   </script>
 </body>
