correction de faute

--- a/SecondHint.html
+++ b/SecondHint.html
@@ -9,6 +9,6 @@
 <body>
   <div class="board" id="board"></div>
   <script src="generateNuancierWithChoice.js"></script>
-  <a href="nuancier.html"><button>continuer</button> </a>
+  <a href="nuancier.html"><button>Continuer</button> </a>
 </body>
 </html>
