--- a/finalScreen.html
+++ b/finalScreen.html
@@ -9,7 +9,7 @@
 <body>
   <div class="board" id="board"></div>
   <script src="generateNuancierWithChoice.js"></script>
-  <button id="rejouer"> rejouer !</button>
+  <button id="rejouer"> Rejouer !</button>
   <p id="pointsJ1"></p>
   <p id="pointsJ2"></p>
   <script src="FinalScreen.js">
