--- a/nuancier.html
+++ b/nuancier.html
@@ -11,7 +11,7 @@
   <script src="GenerateNuancier.js"></script>
   <div class="popup" id="popup">
   <div class="popup-encart"></div>
-  <div class="popup-contenu">est tu sur de ta reponse ?<br/>
+  <div class="popup-contenu">Es-tu sûr de ta réponse ?<br/>
     <button id="Valider">oui</button>
     <button id="closePopup">non</button>
   </div>
