--- a/waitingScreen.html
+++ b/waitingScreen.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <p> Veuillez passer l'écran </p>
-  <a href="SecondHint.html"><button id="StartBtn">continuer </button></a>
+  <a href="SecondHint.html"><button id="StartBtn">Continuer </button></a>
 </body>
 </html>
