--- a/Regle.html
+++ b/Regle.html
@@ -6,22 +6,22 @@
 <title>Hue and Clue !</title>
 </head>
 <body>
-    <h1> Regles du jeu:</h1>
+    <h1> Règles du jeu:</h1>
     <div>
-        <p>Le jeu se joue a deux joeurs. Le but est de faire deviner une couleur a l'autre en se servant de mots clés. <br>
-            le premier joueur choisi une couleur sur la premiere page sans la montrer a l'autre puis démarre le jeu. <br>
-            Ensuite il dis un mot et l'autre joueur choisis une case. <br>
-            Le premier joueur recache l'ecran et donne un deuxieme mots puis apuis sur continuer. <br>
-            Le second joueur choisi une derniere case et les resultats s'affiche.  <br>
+        <p>Le jeu se joue à deux joueurs. Le but est de faire deviner une couleur à l'autre en se servant de mots clés. <br>
+            Le premier joueur choisit une couleur sur la première page sans la montrer à l'autre, puis démarre le jeu. <br>
+            Ensuite, il dit un mot et l'autre joueur choisit une case. <br>
+            Le premier joueur recache l'écran et donne un deuxième mot puis appuie sur continuer. <br>
+            Le second joueur choisit une dernière case et les résultats s'affichent.  <br>
         </p>
-        <p>par exemple le premier joeurs choisi une couleur verte il dis "gazon". <br>
-            puis après avoir vu ce qu'a choisis le second il se rends conmpte que sa couleur est plus proche de la vase et dis alors "etang".
+        <p>Par exemple, le premier jour choisit une couleur verte, il dit "gazon". <br>
+            Puis, après avoir vu ce qu'a choisi le second, il se rend compte que sa couleur est plus proche de la vase et dit alors "étang".
         </p>
-        <p>On marque des points en etant proche de la couleur cible. <br>
+        <p>On marque des points en étant proche de la couleur cible. <br>
         <ul>
-            <li> 3 points pour un tout pile</li>
-            <li> 2 pour une case d'ecart</li>
-            <li>1 pour deux case d'ecart</li>
+            <li>3 points pour un tout pile</li>
+            <li>2 pour une case d'écart</li>
+            <li>1 pour deux cases d'écart</li>
         </ul> </p>
     </div>
 
