réécris les regles

--- a/Regle.html
+++ b/Regle.html
@@ -9,9 +9,9 @@
     <h1> Règles du jeu:</h1>
     <div>
         <p>Le jeu se joue à deux joueurs. Le but est de faire deviner une couleur à l'autre en se servant de mots clés. <br>
-            Le premier joueur choisit une couleur sur la première page sans la montrer à l'autre, puis démarre le jeu. <br>
-            Ensuite, il dit un mot et l'autre joueur choisit une case. <br>
-            Le premier joueur recache l'écran et donne un deuxième mot puis appuie sur continuer. <br>
+            Le premier joueur choisit une couleur sur la première page sans la montrer à l'autre. il donne un indice pour faire deviner sa couleur afin de demmarer le jeu. <br>
+            l'autre joueur choisit une case en fonction de ce que lui évoque cette indice. <br>
+            Le premier joueur recache l'écran et donne un deuxième indice puis appuie sur continuer. <br>
             Le second joueur choisit une dernière case et les résultats s'affichent.  <br>
         </p>
         <p>Par exemple, le premier jour choisit une couleur verte, il dit "gazon". <br>
