--- a/nuancier.html
+++ b/nuancier.html
@@ -12,6 +12,7 @@
   <div class="popup" id="popup">
   <div class="popup-encart"></div>
   <div class="popup-contenu">Es-tu sûr de ta réponse ?<br/>
+    <div class="carre" id="carre"></div>
     <button id="Valider">oui</button>
     <button id="closePopup">non</button>
   </div>
