gain de point plus claire

--- a/finalScreen.html
+++ b/finalScreen.html
@@ -10,8 +10,8 @@
   <div class="board" id="board"></div>
   <script src="generateNuancierWithChoice.js"></script>
   <button id="rejouer"> Rejouer !</button>
+  <p id="gain"></p>
   <p id="pointsJ1"></p>
-  <p id="pointsJ2"></p>
   <script src="FinalScreen.js">
   </script>
 </body>
