changement choix couleur

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 <title>Hue and Clue !</title>
 </head>
 <body>
-  <div class="carre" id="carre"></div>
-  <button id="BtnCarte">Tirer une carte</button>
-  <button id="StartBtn">Lancer le jeu avec cette couleur ! </button>
+  <div class="container">
+    <div class="carre" id="carre1"></div>
+    <div class="carre" id="carre2"></div>
+    <div class="carre" id="carre3"></div>
+    <div class="carre" id="carre4"></div>
+  </div>
   <a href="Regle.html"><button> Règles du jeu</button></a>
   <script src="generateColor.js">
   </script>
